<resources>
    <string name="ok">OK</string>
    <string name="copy">コピー</string>
    <string name="fulllist">全て</string>
    <string name="recent">最近</string>
    <string name="continuous">連続</string>
    <string name="single">単一</string>
    <string name="app_name">au Emoji Mushroom</string>
    <string name="emojistr.old">0xFEB23,0xFEB04,0xFEB09,0xFE82D,0xFEAFD,0xFEAFC,0xFEAFF,0xFEAFE,0xFEB6D,0xFEB6E,0xFEB47,0xFE986,0xFE52F,0xFE4E0,0xFE014,0xFE004,0xFEB6F,0xFEB70,0xFEB75,0xFEB76,0xFEB71,0xFEB72,0xFEB65,0xFEB66,0xFE01D,0xFEB51,0xFEB52,0xFEB62,0xFEAF8,0xFEAF9,0xFEB48,0xFEB00,0xFEB01,0xFEB02,0xFEB03,0xFEB73,0xFEB74,0xFEB6B,0xFEB6C,0xFEB63,0xFEB64,0xFEAF2,0xFEAF1,0xFE000,0xFE7D1,0xFE01E,0xFE016,0xFE4F2,0xFE53F,0xFE19C,0xFEB0C,0xFE982,0xFE03C,0xFEB2A,0xFEB53,0xFE540,0xFE01C,0xFE01B,0xFE53D,0xFE00E,0xFEB45,0xFEB46,0xFEAFA,0xFEAFB,0xFE983,0xFEB54,0xFE542,0xFE336,0xFEB69,0xFEAF0,0xFEAF3,0xFE825,0xFEB49,0xFE1D8,0xFEB6A,0xFEB77,0xFEB56,0xFE1BA,0xFE543,0xFE19B,0xFEB29,0xFEB2D,0xFE4F0,0xFE544,0xFE523,0xFE532,0xFE4E1,0xFEB78,0xFEB79,0xFE4E6,0xFE547,0xFE548,0xFE981,0xFE4EF,0xFE002,0xFE7DD,0xFE4FF,0xFEB26,0xFE7F7,0xFE500,0xFE501,0xFE502,0xFE541,0xFE53E,0xFE549,0xFE807,0xFE001,0xFE529,0xFE4E2,0xFE801,0xFE4F9,0xFE4B0,0xFE03D,0xFE4FA,0xFE820,0xFE4CE,0xFEB88,0xFEB83,0xFEB85,0xFEB82,0xFE545,0xFE546,0xFE4CB,0xFE4D6,0xFE7E4,0xFE53C,0xFE54A,0xFE54B,0xFE52C,0xFE4FB,0xFE54D,0xFEB4A,0xFE03F,0xFE1B7,0xFE4FC,0xFE4FD,0xFE54E,0xFEB86,0xFE4E3,0xFEB9B,0xFEB9C,0xFE54F,0xFE53A,0xFE510,0xFE504,0xFE980,0xFE503,0xFE7F1,0xFE539,0xFE83C,0xFE52A,0xFE4C9,0xFE533,0xFE534,0xFE524,0xFE4B2,0xFE550,0xFE551,0xFE54C,0xFE972,0xFE525,0xFE4FE,0xFE19F,0xFEB4B,0xFE535,0xFE528,0xFE00F,0xFE7E9,0xFE7EA,0xFE80F,0xFE822,0xFE7DF,0xFEB4C,0xFEB4D,0xFEB4E,0xFEB1E,0xFEB1F,0xFEB20,0xFE044,0xFE82E,0xFE82F,0xFE830,0xFE831,0xFE832,0xFE833,0xFE834,0xFE835,0xFE836,0xFE83B,0xFE005,0xFE003,0xFE02B,0xFE02C,0xFE02D,0xFE02E,0xFE02F,0xFE030,0xFE031,0xFE032,0xFE033,0xFE034,0xFE035,0xFE036,0xFE037,0xFE4B6,0xFE4B9,0xFE506,0xFE7F6,0xFE7E7,0xFE531,0xFE4C1,0xFE4B5,0xFE7F5,0xFE4C7,0xFE7EB,0xFE7E6,0xFE7E2,0xFE7D9,0xFE7D4,0xFE7D3,0xFE7D8,0xFE7D7,0xFE7FD,0xFE7FA,0xFE4C2,0xFE808,0xFE010,0xFE4C4,0xFE80D,0xFE520,0xFE80C,0xFE80A,0xFE4DD,0xFE512,0xFE040,0xFE1AE,0xFE4E5,0xFE054,0xFE962,0xFE965,0xFE04F,0xFE1D9,0xFE053,0xFE961,0xFE960,0xFE1C3,0xFE1D2,0xFE7DC,0xFE1CE,0xFE1D7,0xFE1B8,0xFE1BC,0xFE1DA,0xFE1BF,0xFE047,0xFE046,0xFE330,0xFE320,0xFE33A,0xFE346,0xFEB59,0xFEB57,0xFEB5C,0xFE329,0xFEB0E,0xFEB0F,0xFEB61,0xFEB58,0xFE4F6,0xFEB4F,0xFEB5E,0xFEB12,0xFE823,0xFE1B1,0xFE973,0xFE1DB,0xFE1B2,0xFEB7A,0xFEB2B,0xFEB7B,0xFEB96,0xFEB5D,0xFE4F4,0xFEB98,0xFEB3D,0xFE1B3,0xFEB97,0xFE81C,0xFE800,0xFE4DC,0xFE814,0xFE816,0xFE819,0xFE803,0xFE195,0xFE4F5,0xFE197,0xFEE40,0xFEB21,0xFE81D,0xFE4DB,0xFE1B0,0xFEB37,0xFE509,0xFE006,0xFE7D2,0xFE7D6,0xFE522,0xFE804,0xFE809,0xFE806,0xFE50F,0xFE511,0xFEB1B,0xFEB1C,0xFEB1D,0xFE190,0xFE191,0xFEB94,0xFEB95,0xFE011,0xFE012,0xFE013,0xFEB84,0xFE837,0xFEB27,0xFE324,0xFEB18,0xFEB5A,0xFEB5B,0xFEE41,0xFE039,0xFE963,0xFEB36,0xFE4CF,0xFE4CC,0xFE538,0xFE81F,0xFE041,0xFE4BB,0xFE7E1,0xFE4C3,0xFE813,0xFE1AF,0xFE1C0,0xFE1C1,0xFE1C2,0xFE347,0xFE327,0xFE341,0xFE344,0xFE1C5,0xFE7ED,0xFE4D1,0xFE827,0xFE4CA,0xFE515,0xFE042,0xFE53B,0xFE4BC,0xFE7FB,0xFE80B,0xFEB32,0xFE7DB,0xFE1DC,0xFE4EB,0xFE4EC,0xFE7F8,0xFE505,0xFE514,0xFE00B,0xFE1DD,0xFE4DF,0xFE1A1,0xFE4B3,0xFE4B4,0xFE4BA,0xFE4B7,0xFE7E8,0xFEB25,0xFE838,0xFEB38,0xFEB3E,0xFEB3F,0xFEB81,0xFEB31,0xFEB2F,0xFEB40,0xFEB41,0xFEB99,0xFEB9A,0xFE4F7,0xFE839,0xFE83A,0xFE527,0xFE4D3,0xFE045,0xFE828,0xFE048,0xFE985,0xFE987,0xFEB43,0xFE50A,0xFE516,0xFE517,0xFEE42,0xFE4D4,0xFE4D8,0xFE196,0xFE198,0xFE199,0xFE4D9,0xFE4DA,0xFEB1A,0xFEB10,0xFEB13,0xFEB14,0xFEB15,0xFEB16,0xFEB60,0xFE7D5,0xFEB44,0xFE984,0xFE964,0xFE966,0xFE967,0xFE968,0xFE969,0xFE96A,0xFE96B,0xFE96C,0xFE96D,0xFE96E,0xFE051,0xFE052,0xFE055,0xFE056,0xFE96F,0xFE970,0xFE343,0xFE323,0xFE328,0xFE33C,0xFE33F,0xFE342,0xFE332,0xFE33B,0xFE32E,0xFE32F,0xFE326,0xFE322,0xFE325,0xFE81A,0xFE32B,0xFE32D,0xFE32C,0xFE192,0xFE193,0xFE35B,0xFEB9E,0xFEB9F,0xFEBA0,0xFEB9D,0xFE351,0xFE352,0xFE353,0xFE829,0xFE1A2,0xFE818,0xFE80E,0xFE7DE,0xFE7F2,0xFE7F3,0xFE7F4,0xFE7FE,0xFE518,0xFE519,0xFE51A,0xFE51B,0xFE51C,0xFE007,0xFE1A3,0xFE971,0xFE51D,0xFE1C6,0xFE51E,0xFE51F,0xFE017,0xFE513,0xFE008,0xFE00D,0xFE4B8,0xFE009,0xFE805,0xFE4BD,0xFE4BE,0xFE4BF,0xFE4C0,0xFE4E7,0xFEB89,0xFEB8A,0xFEB7C,0xFEB7D,0xFEB7E,0xFEB7F,0xFEB50,0xFEB8B,0xFE536,0xFEB8C,0xFEB8D,0xFEB8E,0xFEB8F,0xFE526,0xFE4B1,0xFE52D,0xFE552,0xFEB90,0xFEB91,0xFE4E8,0xFE4E9,0xFE4EA,0xFE4ED,0xFE4EE,0xFE1A4,0xFE1A5,0xFE1A6,0xFE1A7,0xFE1A8,0xFE1A9,0xFE1AA,0xFE1AB,0xFE1C7,0xFE1B6,0xFE1C9,0xFE1CB,0xFE1CC,0xFE1CD,0xFE1D1,0xFE1D3,0xFE1D4,0xFE1D5,0xFE1D6,0xFE50B,0xFE50C,0xFE50E,0xFE50D,0xFE553,0xFE4CD,0xFEB22,0xFEAF4,0xFEAF5,0xFEB05,0xFEB06,0xFEB08,0xFE057,0xFE058,0xFE059,0xFE050,0xFE04A,0xFE04B,0xFE04C,0xFE05A,0xFE974,0xFE975,0xFE976,0xFE521,0xFE988,0xFE1DE,0xFE817,0xFE7DA,0xFE7FF,0xFE810,0xFE1AC,0xFE1AD,0xFE1DF,0xFE194,0xFE1E0,0xFE04D,0xFE977,0xFE978,0xFE979,0xFE97A,0xFE97B,0xFE97C,0xFE354,0xFE355,0xFE356,0xFE03A,0xFEB17,0xFEB80,0xFE97D,0xFE1E1,0xFE1E2,0xFE97E,0xFE05B,0xFE4E4,0xFEB5F,0xFE33D,0xFE34E,0xFE03B,0xFE34B,0xFE348,0xFE52B,0xFE34A,0xFE334,0xFE34C,0xFE350,0xFE321,0xFE34D,0xFE339,0xFE34F,0xFE4D5,0xFE4C8,0xFE7EC,0xFE811,0xFE812,0xFE97F,0xFEB92,0xFE7F0,0xFE7F9,0xFEE43,0xFEB0D,0xFE1BB,0xFE4D0,0xFE824,0xFEB2C,0xFEAF6,0xFEAF7,0xFE038,0xFE03E,0xFE1B9,0xFE349,0xFE333,0xFEE44,0xFE04E,0xFEB93,0xFE82C,0xFE357,0xFE358,0xFE359,0xFE35A</string>
    <string name="emojistr.full">0xFE000,0xFE001,0xFE002,0xFE003,0xFE004,0xFE005,0xFE006,0xFE007,0xFE008,0xFE009,0xFE00A,0xFE00B,0xFE00C,0xFE00D,0xFE00E,0xFE00F,0xFE010,0xFE038,0xFE03A,0xFE03B,0xFE039,0xFE011,0xFE012,0xFE013,0xFE014,0xFE015,0xFE016,0xFEB69,0xFEB6A,0xFE01E,0xFE01F,0xFE020,0xFE021,0xFE022,0xFE023,0xFE024,0xFE025,0xFE026,0xFE027,0xFE028,0xFE029,0xFE01D,0xFE01C,0xFE02A,0xFE01B,0xFE02B,0xFE02C,0xFE02D,0xFE02E,0xFE02F,0xFE030,0xFE032,0xFE033,0xFE034,0xFE035,0xFE036,0xFE037,0xFE03C,0xFE03D,0xFE03E,0xFE03F,0xFE040,0xFE041,0xFE042,0xFE043,0xFE045,0xFE046,0xFE047,0xFE048,0xFE049,0xFE04A,0xFE04B,0xFE04C,0xFE04D,0xFE04E,0xFE04F,0xFE050,0xFE052,0xFE053,0xFE054,0xFE055,0xFE056,0xFE057,0xFE058,0xFE059,0xFE05A,0xFE05B,0xFE190,0xFE191,0xFE192,0xFE193,0xFE194,0xFE195,0xFE196,0xFE197,0xFE198,0xFE199,0xFE19A,0xFE19C,0xFE19D,0xFE19E,0xFE19F,0xFE1A0,0xFE1A1,0xFE1A2,0xFE1A3,0xFE1A4,0xFE1A5,0xFE1A6,0xFE1A7,0xFE1A8,0xFE1A9,0xFE1AA,0xFE1AB,0xFE1AC,0xFE1AD,0xFE1AE,0xFE1AF,0xFE1B0,0xFE1B1,0xFE1B2,0xFE1B3,0xFE1B4,0xFE1B5,0xFE1B6,0xFE1B9,0xFE1D3,0xFE7DC,0xFE1D4,0xFE1D5,0xFE1D6,0xFE1CC,0xFE1CD,0xFE1CE,0xFE1CF,0xFE1C5,0xFE1C6,0xFE1CB,0xFE1DA,0xFE1E1,0xFE1E2,0xFE1C9,0xFE1D9,0xFE1DC,0xFE1BA,0xFE1BB,0xFE1C8,0xFE1DD,0xFE1BC,0xFE1D8,0xFE1BD,0xFE1C7,0xFE1C2,0xFE1C0,0xFE1B8,0xFE1C3,0xFE1BE,0xFE1C4,0xFE1B7,0xFE1BF,0xFE1C1,0xFE1CA,0xFE1D0,0xFE1D1,0xFE1D2,0xFE1DB,0xFE1DE,0xFE1DF,0xFE1E0,0xFE320,0xFE321,0xFE322,0xFE323,0xFE324,0xFE325,0xFE326,0xFE327,0xFE328,0xFE329,0xFE32A,0xFE32B,0xFE32C,0xFE32D,0xFE32E,0xFE32F,0xFE330,0xFE331,0xFE332,0xFE333,0xFE334,0xFE335,0xFE336,0xFE338,0xFE339,0xFE33A,0xFE33B,0xFE33C,0xFE33D,0xFE33E,0xFE33F,0xFE340,0xFE341,0xFE342,0xFE343,0xFE344,0xFE345,0xFE346,0xFE347,0xFE348,0xFE349,0xFE34A,0xFE34B,0xFE34C,0xFE34D,0xFE34E,0xFE34F,0xFE350,0xFE351,0xFE352,0xFE353,0xFE354,0xFE355,0xFE356,0xFE357,0xFE358,0xFE359,0xFE35A,0xFE35B,0xFE4B0,0xFE4B1,0xFE4B2,0xFE4B3,0xFE4B4,0xFE4B5,0xFE4B6,0xFE4B7,0xFE4B8,0xFE4B9,0xFE4BA,0xFE4BB,0xFE4BC,0xFE4BD,0xFE4BE,0xFE4BF,0xFE4C0,0xFE4C1,0xFE4C2,0xFE4C3,0xFE4C4,0xFE4C6,0xFE4C7,0xFE4C8,0xFE4CC,0xFE4CD,0xFE4D6,0xFE4D7,0xFE4D8,0xFE553,0xFE4CE,0xFE4CF,0xFE4D0,0xFE4D1,0xFE4D3,0xFE4D4,0xFE4D5,0xFE4D9,0xFE4DA,0xFE4DB,0xFE4DC,0xFE4F0,0xFE4F1,0xFE4DD,0xFE4DE,0xFE4DF,0xFE4E0,0xFE4E1,0xFE4E2,0xFE4E3,0xFE4E4,0xFE4ED,0xFE4E8,0xFE4EB,0xFE4E7,0xFE4EA,0xFE4E9,0xFE4E5,0xFE4EE,0xFE4EC,0xFE4E6,0xFE4F6,0xFE4FB,0xFE4C9,0xFE4CA,0xFE4CB,0xFE4FA,0xFE4F5,0xFE4F7,0xFE4F8,0xFE044,0xFE4D2,0xFE509,0xFE50A,0xFE50C,0xFE50D,0xFE50E,0xFE50F,0xFE510,0xFE511,0xFE512,0xFE513,0xFE514,0xFE515,0xFE516,0xFE517,0xFE518,0xFE519,0xFE51A,0xFE51B,0xFE51C,0xFE51D,0xFE51E,0xFE51F,0xFE520,0xFE521,0xFE017,0xFE522,0xFE523,0xFE524,0xFE525,0xFE526,0xFE527,0xFE528,0xFE529,0xFE52A,0xFE52B,0xFE52C,0xFE52D,0xFE822,0xFE52F,0xFE530,0xFE531,0xFE533,0xFE534,0xFE535,0xFEB92,0xFEB7C,0xFEB7D,0xFEB7E,0xFEB7F,0xFEB80,0xFE536,0xFE537,0xFE538,0xFE539,0xFE53A,0xFE53B,0xFE53C,0xFE53D,0xFE81D,0xFE81E,0xFE53E,0xFE53F,0xFE540,0xFE541,0xFE542,0xFE543,0xFE544,0xFE545,0xFE546,0xFE547,0xFE502,0xFE4FF,0xFE500,0xFE501,0xFE503,0xFE504,0xFE4FD,0xFE548,0xFE549,0xFE54A,0xFE54B,0xFE54C,0xFE54D,0xFE54E,0xFE54F,0xFE550,0xFE551,0xFE552,0xFE7D0,0xFE7D1,0xFE7D2,0xFE7D3,0xFE7D4,0xFE7D5,0xFE7D6,0xFE7D7,0xFE7D8,0xFE7D9,0xFE7DA,0xFE7DD,0xFE7DE,0xFE7DF,0xFE7E0,0xFE7E1,0xFE7E2,0xFE7E3,0xFE7E4,0xFE7E5,0xFE7E6,0xFE7E7,0xFE7E8,0xFE7E9,0xFE7EA,0xFE7EC,0xFE7ED,0xFE7EE,0xFE7EF,0xFE7F1,0xFE7F2,0xFE7F3,0xFE7F4,0xFE7F5,0xFE7F6,0xFE7F7,0xFE7F8,0xFE7F9,0xFE7FA,0xFE7FB,0xFE7FC,0xFE7FD,0xFE7FE,0xFE7FF,0xFE800,0xFE801,0xFE802,0xFE803,0xFE804,0xFE805,0xFE806,0xFE807,0xFE808,0xFE809,0xFE80A,0xFE80B,0xFE80C,0xFE80D,0xFE80E,0xFE80F,0xFE810,0xFE811,0xFE812,0xFE813,0xFE814,0xFE815,0xFE816,0xFE817,0xFE818,0xFE819,0xFE81A,0xFE81B,0xFE4EF,0xFE4F9,0xFE81C,0xFE81F,0xFE820,0xFE823,0xFE824,0xFE825,0xFE826,0xFE827,0xFE828,0xFE829,0xFE82A,0xFEB25,0xFEB29,0xFEB2D,0xFEB2A,0xFEB47,0xFE82C,0xFE82E,0xFE82F,0xFE830,0xFE831,0xFE832,0xFE833,0xFE834,0xFE835,0xFE836,0xFE837,0xFE83B,0xFE838,0xFE839,0xFE83A,0xFE960,0xFE961,0xFE962,0xFE963,0xFE964,0xFE965,0xFE966,0xFE967,0xFE968,0xFE969,0xFE96A,0xFE96B,0xFE96C,0xFE96D,0xFE96E,0xFE96F,0xFE970,0xFE971,0xFE972,0xFE973,0xFE974,0xFE975,0xFE976,0xFE977,0xFE978,0xFE979,0xFE97A,0xFE97B,0xFE97C,0xFE97D,0xFE97E,0xFE97F,0xFE980,0xFE981,0xFE982,0xFE983,0xFE984,0xFE985,0xFE986,0xFE987,0xFE988,0xFEAF0,0xFEAF1,0xFEAF2,0xFEAF3,0xFEAF4,0xFEAF5,0xFEAF6,0xFEAF7,0xFEAF8,0xFEAF9,0xFEAFA,0xFEAFB,0xFEAFC,0xFEAFD,0xFEAFE,0xFEAFF,0xFEB03,0xFEB02,0xFEB78,0xFEB79,0xFEB01,0xFEB00,0xFEB44,0xFEB45,0xFEB46,0xFEB04,0xFEB05,0xFEB06,0xFEB09,0xFEB0A,0xFEB0B,0xFEB07,0xFEB08,0xFE82B,0xFEB0C,0xFEB0D,0xFEB0E,0xFEB10,0xFEB11,0xFEB12,0xFEB13,0xFEB14,0xFEB15,0xFEB16,0xFEB17,0xFEB18,0xFEB19,0xFEB1A,0xFEB1B,0xFEB1C,0xFEB1D,0xFEB1E,0xFEB1F,0xFEB20,0xFEB22,0xFEB23,0xFEB26,0xFEB2C,0xFE7EB,0xFE7F0,0xFEB33,0xFEB34,0xFE505,0xFE506,0xFE507,0xFE508,0xFEB35,0xFE4F3,0xFEB48,0xFEB49,0xFEB84,0xFEB38,0xFEB21,0xFEB81,0xFEB36,0xFEB28,0xFEB27,0xFEB4F,0xFEB37,0xFEB32,0xFEB24,0xFEB3F,0xFEB2E,0xFEB2F,0xFEB30,0xFEB31,0xFEB39,0xFEB3A,0xFEB3B,0xFEB3C,0xFEB3E,0xFEB40,0xFEB41,0xFEB2B,0xFEB43,0xFEB3D,0xFEB50,0xFEB51,0xFEB52,0xFEB53,0xFEB54,0xFEB55,0xFEB56,0xFEB57,0xFEB58,0xFEB59,0xFEB5A,0xFEB5B,0xFEB5C,0xFEB5D,0xFE4F4,0xFEB5E,0xFEB5F,0xFE532,0xFEB60,0xFEB61,0xFEB62,0xFEB65,0xFEB66,0xFEB63,0xFEB64,0xFEB64,0xFEB67,0xFEB68,0xFEB6B,0xFEB6C,0xFEB6D,0xFEB6E,0xFEB6F,0xFEB70,0xFEB71,0xFEB72,0xFEB73,0xFEB74,0xFEB75,0xFEB76,0xFEB77,0xFEB7A,0xFEB7B,0xFEB83,0xFEB88,0xFEB91,0xFE821,0xFE4FC,0xFE4FE,0xFEB85,0xFEB8D,0xFEB86,0xFEB87,0xFEB90,0xFEB8A,0xFEB82,0xFE4F2,0xFEB8B,0xFEB8C,0xFEB8F,0xFEB4B,0xFEB8E,0xFE01A,0xFE019,0xFE018,0xFEB42,0xFEB4C,0xFEB4D,0xFEB4E,0xFEB4A,0xFEB93,0xFEB95,0xFEB94,0xFEB96,0xFEB97,0xFEB98,0xFEB99,0xFEB9A,0xFEB9B,0xFEB9C,0xFEB9D,0xFEB9E,0xFEB9F,0xFEBA0,0xFEBA1</string>
</resources>